--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -6,13 +6,18 @@
   <p>MST Balance: {{ mstBalance }}</p>
   <p>MPT Balance: {{ mptBalance }}</p>
 
-  <button class="btn btn-primary mb-4" (click)="toggleForm()">
+  <button class="btn btn-primary mb-4 mx-2" (click)="toggleForm()">
     Add Account
   </button>
 
-  <button class="btn btn-secondary mb-4" (click)="toggleTransferForm()">
+  <button class="btn btn-secondary mb-4 mx-2" (click)="toggleTransferForm()">
     Transfer Tokens
   </button>
+
+   <button class="btn btn-success mb-4 mx-2" (click)="toggleMintForm()">
+   Mint Tokens
+  </button>
+
 
   <div *ngIf="showForm" class="card p-4 mb-4">
     <form [formGroup]="accountForm" (ngSubmit)="addAccount()">
@@ -213,7 +218,38 @@
       </button>
     </form>
   </div>
-
+<div *ngIf="showMintForm" class="card p-4 mb-4">
+    <h2 class="mb-4">Mint Tokens</h2>
+    <form [formGroup]="mintForm" (ngSubmit)="mintTokens()">
+      <div class="form-group mb-3">
+        <label for="mintAmount">Amount</label>
+        <input
+          id="mintAmount"
+          class="form-control"
+          formControlName="amount"
+          type="number"
+        />
+      </div>
+      <div class="form-group mb-3">
+        <label for="tokenType">Token Type</label>
+        <select id="tokenType" class="form-control" formControlName="tokenType">
+          <option value="MST">MST</option>
+          <option value="MPT">MPT</option>
+        </select>
+      </div>
+      <button
+        type="submit"
+        class="btn btn-primary"
+        [disabled]="mintForm.invalid || mintSpinner"
+      >
+        Mint Tokens
+        <span
+          *ngIf="mintSpinner"
+          class="spinner-border spinner-border-sm ms-2"
+        ></span>
+      </button>
+    </form>
+  </div>
   <div class="card p-4 mb-4">
     <h2 class="mb-4">Query Account</h2>
     <form [formGroup]="queryForm" (ngSubmit)="queryAccount()">
@@ -230,6 +266,8 @@
         Query
       </button>
     </form>
+
+
 
     <div *ngIf="queriedAccount" class="mt-4">
       <h3>Account Details</h3>
@@ -262,38 +300,7 @@
     </div>
   </div>
 
-  <div class="card p-4 mb-4">
-    <h2 class="mb-4">Mint Tokens</h2>
-    <form [formGroup]="mintForm" (ngSubmit)="mintTokens()">
-      <div class="form-group mb-3">
-        <label for="mintAmount">Amount</label>
-        <input
-          id="mintAmount"
-          class="form-control"
-          formControlName="amount"
-          type="number"
-        />
-      </div>
-      <div class="form-group mb-3">
-        <label for="tokenType">Token Type</label>
-        <select id="tokenType" class="form-control" formControlName="tokenType">
-          <option value="MST">MST</option>
-          <option value="MPT">MPT</option>
-        </select>
-      </div>
-      <button
-        type="submit"
-        class="btn btn-primary"
-        [disabled]="mintForm.invalid || mintSpinner"
-      >
-        Mint Tokens
-        <span
-          *ngIf="mintSpinner"
-          class="spinner-border spinner-border-sm ms-2"
-        ></span>
-      </button>
-    </form>
-  </div>
+  
 
   <div class="card p-4">
     <h2 class="mb-4">All Accounts</h2>
@@ -341,30 +348,34 @@
         </tr>
       </tbody>
     </table>
-     <div *ngIf="showDeleteAccountForm" class="card p-4 mb-4">
-    <h2 class="mb-4">Confirm Deletion</h2>
-    <p>
-      Please repeat this word to confirm deletion:
-      <strong>{{ randomWord }}</strong>
-    </p>
-    <form [formGroup]="deleteForm" (ngSubmit)="deleteAccount()">
-      <div class="form-group mb-3">
-        <input
-          id="securityWord"
-          class="form-control"
-          formControlName="securityWord"
-          type="text"
-        />
-      </div>
-      <button type="submit" class="btn btn-danger">Confirm</button>
-      <button type="button" class="btn btn-secondary" (click)="cancelDelete()">
-        Cancel
-      </button>
-    </form>
   </div>
+  <div *ngIf="showDeleteAccountForm" class="modal-backdrop">
+    <div class="modal-content">
+      <h2 class="mb-4">Confirm Deletion</h2>
+      <p>
+        Please repeat this word to confirm deletion:
+        <strong>{{ randomWord }}</strong>
+      </p>
+      <form [formGroup]="deleteForm" (ngSubmit)="deleteAccount()">
+        <div class="form-group mb-3">
+          <input
+            id="securityWord"
+            class="form-control"
+            formControlName="securityWord"
+            type="text"
+          />
+        </div>
+        <button type="submit" class="btn btn-danger">Confirm</button>
+        <button
+          type="button"
+          class="btn btn-secondary mx-2"
+          (click)="cancelDelete()"
+        >
+          Cancel
+        </button>
+      </form>
+    </div>
   </div>
-  
-
   <div class="card p-4">
     <h2 class="mb-4">All Tokens</h2>
     <table class="table table-striped table-responsive">
@@ -402,6 +413,4 @@
       </tbody>
     </table>
   </div>
-
- 
 </div>
